--- a/command/master/score/old/light-spread2.yml
+++ b/command/master/score/old/light-spread2.yml
@@ -11,7 +11,7 @@ patterns:
 
   two:
     type: insert
-    begin: local.steps
+    offset: local.steps
     pattern:
       type: spread
       colors: [red, yellow]
