--- a/command/master/score/old/light5.yml
+++ b/command/master/score/old/light5.yml
@@ -3,8 +3,7 @@ type: sequence
 patterns:
   a pattern:
     type: spread
-    begin: red
-    end: white
+    colors: red, white
     steps: 32
 
 elements:
