--- a/command/master/score/old/light7.yml
+++ b/command/master/score/old/light7.yml
@@ -12,8 +12,7 @@ patterns:
     offset: local.loop + 32
     pattern:
       type: spread
-      begin: red
-      end: white
+      colors: red, white
       steps: 8
 
 elements:
