--- a/command/master/score/old/light-a.yml
+++ b/command/master/score/old/light-a.yml
@@ -8,7 +8,7 @@ variables:
 patterns:
   one:
     type: insert
-    begin: local.loop / 2 + 32
+    offset: local.loop / 2 + 32
 
     pattern:
       type: spread
@@ -17,7 +17,7 @@ patterns:
 
   two:
     type: insert
-    begin: local.loop / 4
+    offset: local.loop / 4
     skip: 4
     pattern:
       type: spread
