--- a/command/master/score/old/light-sound.yml
+++ b/command/master/score/old/light-sound.yml
@@ -3,8 +3,7 @@ type: sequence
 patterns:
   one:
     type: spread
-    begin: red
-    end: white
+    colors: red, white
     steps: 60 + s.level
 
 elements:
