New Snapshot feature, plus lots of small bug fixes and changes.

--- a/command/master/score/old/light-fancy.yml
+++ b/command/master/score/old/light-fancy.yml
@@ -25,7 +25,7 @@ patterns:
       steps: 16
 
   three:
-    type: transpose
+    type: mirror
     pattern:
       type: insert
       offset: config.light.count - local.loop
