--- a/command/master/score/old/light-b.yml
+++ b/command/master/score/old/light-b.yml
@@ -7,7 +7,7 @@ variables:
 
 patterns:
   three:
-    type: transpose
+    type: mirror
     pattern:
       type: insert
       offset: config.light.count - local.loop
