Starting to change pattern output to pattern bank.

--- a/data/master/score/old/light-a.yml
+++ b/data/master/score/old/light-a.yml
@@ -28,10 +28,10 @@ elements:
   -
     type: pattern
     pattern: one
-    output: light
+    bank: light
 
   -
     type: pattern
     pattern: two
-    output: light
+    bank: light
 
