--- a/data/master/score/old/light-spread2.yml
+++ b/data/master/score/old/light-spread2.yml
@@ -22,9 +22,9 @@ elements:
   -
     type: pattern
     pattern: one
-    output: light
+    bank: light
 
   -
     type: pattern
     pattern: two
-    output: light
+    bank: light
