Change bank to output

--- a/data/master/score/old/light-a.yml
+++ b/data/master/score/old/light-a.yml
@@ -28,10 +28,10 @@ elements:
   -
     type: pattern
     pattern: one
-    bank: light
+    output: light
 
   -
     type: pattern
     pattern: two
-    bank: light
+    output: light
 
