--- a/data/master/score/old/light-spread2.yml
+++ b/data/master/score/old/light-spread2.yml
@@ -22,9 +22,9 @@ elements:
   -
     type: pattern
     pattern: one
-    bank: light
+    output: light
 
   -
     type: pattern
     pattern: two
-    bank: light
+    output: light
