--- a/data/master/score/old/light10.yml
+++ b/data/master/score/old/light10.yml
@@ -18,9 +18,9 @@ elements:
   -
     type: pattern
     pattern: one
-    bank: light
+    output: light
 
   -
     type: pattern
     pattern: two
-    bank: light
+    output: light
