Starting to transition to ColorModel

--- a/code/cpp/Builds/Linux/Makefile
+++ b/code/cpp/Builds/Linux/Makefile
@@ -62,6 +62,7 @@ OBJECTS := \
   $(OBJDIR)/InstrumentComponent_75edd5bc.o \
   $(OBJDIR)/InstrumentGrid_18eea031.o \
   $(OBJDIR)/LightingWindow_79bb5b00.o \
+  $(OBJDIR)/ColorModel_26f43044.o \
   $(OBJDIR)/ColorName_ff26ac1a.o \
   $(OBJDIR)/HSB_7615b903.o \
   $(OBJDIR)/InitLog_83a5ff59.o \
@@ -165,6 +166,11 @@ $(OBJDIR)/InstrumentGrid_18eea031.o: ../../echomesh/component/InstrumentGrid.cpp
 $(OBJDIR)/LightingWindow_79bb5b00.o: ../../echomesh/component/LightingWindow.cpp
 	-@mkdir -p $(OBJDIR)
 	@echo "Compiling LightingWindow.cpp"
+	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
+
+$(OBJDIR)/ColorModel_26f43044.o: ../../echomesh/color/ColorModel.cpp
+	-@mkdir -p $(OBJDIR)
+	@echo "Compiling ColorModel.cpp"
 	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
 
 $(OBJDIR)/ColorName_ff26ac1a.o: ../../echomesh/color/ColorName.cpp
