--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -209,7 +209,7 @@ light:
     show_at_startup: true
     show: true
     type: cython
-    period: 100ms
+    period: 10ms
     closes_echomesh: false
 
     background: white
@@ -242,6 +242,8 @@ load_module:
   # pi3d will only work for Raspberry Pi users and is disabled automatically
   # for everyone else.
   pi3d: false
+
+  pyaudio: true
 
 # The logging section controls the destination of informational and warning
 # messages.
