--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -131,6 +131,7 @@ audio:
 control_program: true
 
 delay_before_keyboard_activates: 0.5 seconds
+delay_before_run: 0.1 seconds
 
 # The "transfer" operation overwrites all the score files on all the target
 # machines.  A backup is made during the transfer in case it fails halfway
