--- a/code/cpp/Builds/Linux/Makefile
+++ b/code/cpp/Builds/Linux/Makefile
@@ -65,6 +65,7 @@ OBJECTS := \
   $(OBJDIR)/ColorModel_26f43044.o \
   $(OBJDIR)/ColorName_ff26ac1a.o \
   $(OBJDIR)/HSB_7615b903.o \
+  $(OBJDIR)/Mirror_c90fc27d.o \
   $(OBJDIR)/Transform_d1c2c3f8.o \
   $(OBJDIR)/InitLog_83a5ff59.o \
   $(OBJDIR)/EchomeshApplication_68207ea3.o \
@@ -182,6 +183,11 @@ $(OBJDIR)/ColorName_ff26ac1a.o: ../../echomesh/color/ColorName.cpp
 $(OBJDIR)/HSB_7615b903.o: ../../echomesh/color/HSB.cpp
 	-@mkdir -p $(OBJDIR)
 	@echo "Compiling HSB.cpp"
+	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
+
+$(OBJDIR)/Mirror_c90fc27d.o: ../../echomesh/color/Mirror.cpp
+	-@mkdir -p $(OBJDIR)
+	@echo "Compiling Mirror.cpp"
 	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
 
 $(OBJDIR)/Transform_d1c2c3f8.o: ../../echomesh/color/Transform.cpp
