--- a/code/cpp/Builds/Linux/Makefile
+++ b/code/cpp/Builds/Linux/Makefile
@@ -54,6 +54,7 @@ OBJECTS := \
   $(OBJDIR)/Envelope_e091de3b.o \
   $(OBJDIR)/EnvelopePlayer_6908c03c.o \
   $(OBJDIR)/GetReader_4ae00cf8.o \
+  $(OBJDIR)/Input_2738d89.o \
   $(OBJDIR)/MidiController_f87aad08.o \
   $(OBJDIR)/PanGainPlayer_d877dfc.o \
   $(OBJDIR)/ResamplingPositionableAudioSource_55438ad3.o \
@@ -130,6 +131,11 @@ $(OBJDIR)/EnvelopePlayer_6908c03c.o: ../../echomesh/audio/EnvelopePlayer.cpp
 $(OBJDIR)/GetReader_4ae00cf8.o: ../../echomesh/audio/GetReader.cpp
 	-@mkdir -p $(OBJDIR)
 	@echo "Compiling GetReader.cpp"
+	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
+
+$(OBJDIR)/Input_2738d89.o: ../../echomesh/audio/Input.cpp
+	-@mkdir -p $(OBJDIR)
+	@echo "Compiling Input.cpp"
 	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
 
 $(OBJDIR)/MidiController_f87aad08.o: ../../echomesh/audio/MidiController.cpp
