Some improvements to update, but still lose keyboard control.

--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -159,7 +159,7 @@ light:
 
   visualizer:
     enable: true
-    period: 10ms
+    period: 10Hz
     show: true
     transform: null  # Should this be brightness_transform?
 
