--- a/code/python/echomesh/config/config.yml
+++ b/code/python/echomesh/config/config.yml
@@ -65,15 +65,7 @@ audio:
   output:
     chunk_size: 1024
 
-    # Similar to device_index and device_name for input.
-    # Not being used, see https://github.com/rec/echomesh/issues/196.
-    device_index: -1
-    device_name: ""
-
     enable: true
-
-    # Size of the audio output buffer frame.
-    frames_per_buffer: 1024
 
     # Do we route the audio to the HD or the earphone audio jack?
     # Disabled, see https://github.com/rec/echomesh/issues/197.
@@ -166,7 +158,7 @@ light:
     background: white
     layout: [32, 32]
     padding: [3, 3]
-    top_left: [0,44]
+    top_left: [0, 44]
     instrument:
       background: 0x606060
       border:
