--- a/data/master/score/animation.yml
+++ b/data/master/score/animation.yml
@@ -6,6 +6,8 @@ pattern:
     filename: "/Volumes/Zog/Documents/animated gifs/spinning sparks.gif"
     x: 32
     y: 32
+    left_offset: 200
+    top_offset: 200
     stretch: true
     frame: system.elapsed * 12
 
