--- a/data/master/score/animation.yml
+++ b/data/master/score/animation.yml
@@ -2,6 +2,7 @@ type: sequence
 
 pattern:
   an animation:
+    # type: image
     type: animation
     filename: "/Volumes/Zog/Documents/animated gifs/spinning sparks.gif"
     x: 32
