--- a/data/master/score/text.yml
+++ b/data/master/score/text.yml
@@ -3,9 +3,8 @@ type: sequence
 pattern:
   some text:
     type: text
-    file: asset/font/DejaVuSansMono-Bold.ttf
-    x: 60
-    y: 12
+    font: asset/font/DejaVuSansMono-Bold
+    size: 12
     text: "Hello, world."
 
 elements:
