Text handles offsets and sizes somewhat better.

--- a/data/master/score/text.yml
+++ b/data/master/score/text.yml
@@ -4,8 +4,9 @@ pattern:
   some text:
     type: text
     font: asset/font/DejaVuSansMono-Bold
-    size: 12
-    text: "Hello, world."
+    height: 12
+    text: "ABCDEFGHIJKLMNOPQRSTUVWYZabcdefghijklmnopqrstuvwyz"
+    # text: "A"
 
 elements:
   -
