--- a/data/master/score/text.yml
+++ b/data/master/score/text.yml
@@ -7,6 +7,7 @@ pattern:
     height: 12
     #text: "ABCDEFGHIJKLMNOPQRSTUVWYZabcdefghijklmnopqrstuvwyz"
     text: "A"
+    debug: true
 
 elements:
   -
