Fixed issues with combining empty color lists.

--- a/data/master/score/text.yml
+++ b/data/master/score/text.yml
@@ -5,9 +5,7 @@ pattern:
     type: text
     font: DejaVuSansMono-Bold
     height: 12
-    #text: "ABCDEFGHIJKLMNOPQRSTUVWYZabcdefghijklmnopqrstuvwyz"
-    text: "A"
-    debug: true
+    text: "ABCDEFGHIJKLMNOPQRSTUVWYZabcdefghijklmnopqrstuvwyz"
 
 elements:
   -
