Fix some of our leak.

--- a/data/master/score/text.yml
+++ b/data/master/score/text.yml
@@ -3,8 +3,9 @@ type: sequence
 pattern:
   some text:
     type: text
-    font: DejaVuSansMono-Bold
-    height: 12
+    font: silkscreen/slkscr
+    font_height: 8
+    debug: true
     text: "ABCDEFGHIJKLMNOPQRSTUVWYZabcdefghijklmnopqrstuvwyz"
 
 elements:
