Moving toward .pcf fonts.

--- a/data/master/score/text.yml
+++ b/data/master/score/text.yml
@@ -3,7 +3,7 @@ type: sequence
 pattern:
   some text:
     type: text
-    font: silkscreen/slkscr
+    font: dina/DinaMedium10
     font_height: 8
     debug: true
     text: "ABCDEFGHIJKLMNOPQRSTUVWYZabcdefghijklmnopqrstuvwyz"
