Getting closer to PcfFonts.

--- a/data/master/score/text.yml
+++ b/data/master/score/text.yml
@@ -3,8 +3,8 @@ type: sequence
 pattern:
   some text:
     type: text
-    # font: DejaVuSansMono-Bold
-    font: dina/DinaMedium10
+    font: DejaVuSansMono-Bold
+    # font: dina/DinaMedium10
     height: 12
     text: "ABCDEFGHIJKLMNOPQRSTUVWYZabcdefghijklmnopqrstuvwyz"
 
