--- a/data/master/score/text.yml
+++ b/data/master/score/text.yml
@@ -3,10 +3,12 @@ type: sequence
 pattern:
   some text:
     type: text
-    font: DejaVuSansMono-Bold
-    # font: dina/DinaMedium10
+    #font: DejaVuSansMono-Bold
+    font: dina/DinaMedium10
+    # font: trisk
     height: 12
-    text: "ABCDEFGHIJKLMNOPQRSTUVWYZabcdefghijklmnopqrstuvwyz"
+    # text: "ABCDEFGHIJKLMNOPQRSTUVWYZabcdefghijklmnopqrstuvwyz"
+    text: "Hello"
 
 elements:
   -
