Now Patterns are have a SETTINGS variable that describes them.

--- a/data/master/score/light1.yml
+++ b/data/master/score/light1.yml
@@ -9,6 +9,6 @@ elements:
   -
     type: pattern
     pattern: just red
-    output:
-      type: visualizer
-      layout: [20, 1]
+#    output:
+#      type: visualizer
+#      layout: [20, 1]
